<resources>
    <string name="app_name">CryptoCurrency</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="registerAccount"><u>Do not have an account?</u></string>
    <string name="dollar_price">$ %f</string>
    <string name="search">Search</string>
    <string name="set_refresh_time">Set refresh time</string>
    <string name="hashing_algorithm">Hashing Algorithm</string>
    <string name="price_change_percentage">Price Change Percentage</string>
    <string name="choose">Choose</string>
    <string name="current_price">Current Price</string>
    <string name="there_is_no_favorite_data">There is no favorite data</string>
</resources>