<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="crpytoDetail"
            type="com.example.cryptoapp.model.CryptoDetail" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="currentPrice"
            type="double" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color"
        tools:context=".ui.horoscope_detail.HoroscopeDetailFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_favorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="15dp"
            android:src="@{crpytoDetail.isFavorite ? @drawable/ic_favorite_filled_cerise : @drawable/ic_favorite_empty_lilac_bloom}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_crypto"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:layout_marginTop="70dp"
            app:imageUrl="@{crpytoDetail.imageUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeHolderDrawable="@{@drawable/ic_splash}"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_personal_detail_button"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/set_refresh_time"
            android:textAllCaps="false"
            android:layout_marginTop="100dp"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_crypto_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_crypto_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{crpytoDetail.name}"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_crypto"
            tools:text="Bittorrent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_crypto_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{crpytoDetail.symbol}"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_crypto_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_crypto_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/current_price"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_crypto_symbol" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_crypto_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{@string/dollar_price(currentPrice)}"
            android:textColor="#99FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_crypto_price_title"
            tools:text="0.55555" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hashing_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/hashing_algorithm"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_crypto_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hashing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{crpytoDetail.hashingAlgorithm}"
            android:textColor="#99FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hashing_title"
            tools:text="N/A" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price_change_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/price_change_percentage"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hashing" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#99FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_change_title"
            app:textColorBasedOnPrefix="@{String.valueOf(crpytoDetail.changeLast24H)}"
            tools:text="-3.18%" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_crypto_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="3dp"
            android:maxLines="6"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"
            android:text="@{crpytoDetail.description}"
            android:textColor="#99FFFFFF"
            android:textSize="18sp"
            app:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price_change"
            tools:text="@tools:sample/lorem/random" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/app_color"
            android:elevation="10dp"
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_bar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>